# infobob-docker

./: .gitattributes  .gitignore  .sops.yaml  README.md  caddyfile-prod.txt  docker-compose.yml  docker-stack.yml  env-secrets  rproxy-prod.ini  webhooks-env.yaml
.git-crypt/keys/default/0/: 70E43AE0615071E5BC51F03EFC6E11A8B1965095.gpg  957E0DFD0CB261E5E8DD7AC72A1170661AE4C493.gpg
deployscript/: .dockerignore  Dockerfile  infobob_docker_deploy.py  pyproject.toml
infobob/: .dockerignore  Dockerfile  config-template.json  launch.sh
infobob-config/: master.yaml  testing.yaml
infobob/infobat/: service.py
nginx-proxy/: Dockerfile  default.conf
webhooks/: Dockerfile  main.go
